--- a/Web1/plantillas/miplantilla.html
+++ b/Web1/plantillas/miplantilla.html
@@ -1,7 +1,7 @@
 <html>
     <body>
     <h1>
-    Esta es nuestra primer plantilla ojala eres lo mejor yonathan
+    Esta es nuestra primer plantilla ojala eres lo mejor yonathan de lo mejor
     </h1>
     </body>
     </html>
