--- a/Web1/plantillas/plantilla_base.html
+++ b/Web1/plantillas/plantilla_base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Tu Nombre{% endblock %}</title>
+    <title>{% block title %}AMICI{% endblock %}</title>
     <style>
         body {
             background: linear-gradient(to right, #ffffff, #000000);
@@ -34,7 +34,7 @@
 </head>
 <body>
     <header>
-        <h1>{% block header_content %}Tu Nombre{% endblock %}</h1>
+        <h1>{% block header_content %}Yonathan jimenez{% endblock %}</h1>
     </header>
 
     <section>
@@ -43,7 +43,7 @@
 
     <div class="custom-bar">
         <!-- Contenido de tu barra personalizada -->
-        Personaliza tu barra aquí
+        Simular Solicitar Agendar programar
     </div>
 </body>
 </html>
