--- a/Web1/plantillas/plantilla1.html
+++ b/Web1/plantillas/plantilla1.html
@@ -1,11 +1,11 @@
 <!-- otra_plantilla.html -->
 {% extends 'plantilla_base.html' %}
 
-{% block title %}Diego Triana{% endblock %}
+{% block title %}AMICI{% endblock %}
 
-{% block header_content %}Hola{% endblock %}
+{% block header_content %}{% endblock %}
 
 {% block content %}
-    <p>Me gustan comer frijoles con arpargatas.</p>
-    <p>Puedes personalizarlo según tus necesidades.</p>
+    <p></p>
+    <p></p>
 {% endblock %}
