--- a/Web1/plantillas/index.html
+++ b/Web1/plantillas/index.html
@@ -55,14 +55,14 @@
         </nav>
       </div></header>
     <section class="u-clearfix u-section-1" id="sec-c935">
-      <img class="custom-expanded u-expanded-height-lg u-expanded-height-md u-expanded-height-sm u-expanded-height-xl u-image u-image-default u-image-1" src="images/introbg.jpg" alt="" data-image-width="1154" data-image-height="1075">
-      <img class="custom-expanded u-expanded-height-lg u-expanded-height-md u-expanded-height-sm u-expanded-height-xl u-image u-image-contain u-image-default u-image-2" src="images/41.jpg" alt="" data-image-width="4384" data-image-height="5896">
+      <img class="custom-expanded u-expanded-height-lg u-expanded-height-md u-expanded-height-xl u-image u-image-default u-image-1" src="images/introbg.jpg" alt="" data-image-width="1154" data-image-height="1075">
+      <img class="custom-expanded u-expanded-height-lg u-expanded-height-md u-expanded-height-xl u-expanded-width-sm u-image u-image-contain u-image-default u-image-2" src="images/41.jpg" alt="" data-image-width="4384" data-image-height="5896">
       <h1 class="u-text u-text-1">Bienvenidos AMICI<span class="u-text-black">
           <span style="font-weight: 700;"></span>
         </span>
       </h1>
       <h3 class="u-text u-text-2">CREDITO DIGITAL</h3>
-      <h5 class="u-text u-text-3"> En AMICI, revolucionamos las finanzas con soluciones tecnológicas innovadoras, simplicidad para experiencia inolvidable</h5>
+      <h5 class="u-text u-text-3"> En AMICI, revolucionamos las finanzas con soluciones tecnológicas innovadoras, simpli​cidad para experiencia inolvidable</h5>
       <a href="https://nicepage.com/k/announcement-html-templates" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-3 u-hover-custom-color-2 u-radius u-btn-1">Solicitar</a>
     </section>
     
