--- a/Web1/plantillas/Amici.html
+++ b/Web1/plantillas/Amici.html
@@ -24,7 +24,7 @@
 		"name": ""
 }</script>
     <meta name="theme-color" content="#29b7dd">
-    <meta property="og:title" content="Amici">
+    <meta property="og:title" content="Amici">  
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="es"><header class="u-clearfix u-header u-sticky u-header" id="sec-2485"><div class="u-clearfix u-sheet u-sheet-1">
@@ -147,15 +147,9 @@
         </p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
-        <span>Website Templates</span>
-      </a>
-      <p class="u-text">
-        <span>created with</span>
-      </p>
       <a class="u-link" href="" target="_blank">
-        <span>Website Builder Software</span>
-      </a>. 
+        <span></span>
+      </a>
     </section>
   
 </body></html>
