--- a/Web1/plantillas/Amici.html
+++ b/Web1/plantillas/Amici.html
@@ -46,7 +46,7 @@
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
                 <ul class="u-align-left u-nav u-popupmenu-items u-spacing-0 u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">Ingresa</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">Contactanos</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="{% url 'contactanos' %}">Contactanos</a>
 </li></ul>
               </div>
             </div>
