--- a/Web1/plantillas/Contactanos.html
+++ b/Web1/plantillas/Contactanos.html
@@ -61,7 +61,7 @@
         <p class="u-custom-font u-font-roboto-slab u-text u-text-body-alt-color u-text-1">Amici </p>
         <h1 class="u-align-center-xs u-custom-font u-font-roboto-slab u-text u-text-body-alt-color u-text-default-lg u-text-default-xl u-title u-text-2">Dejanos Saber Que Te Inquieta</h1>
         <div class="u-form u-form-1">
-          <form action="https://forms.nicepagesrv.com/v2/form/process" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" style="padding: 10px" source="email" name="form">
+          <form action="" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" style="padding: 10px" source="email" name="form">
             <div class="u-form-group u-form-name u-label-none">
               <label for="name-3b9a" class="u-label">Nombre</label>
               <input type="text" placeholder="Nombre" id="name-3b9a" name="name" class="u-input u-input-rectangle" required="">
@@ -78,8 +78,8 @@
               <a href="#" class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-color-2 u-radius u-btn-1">Enviar</a>
               <input type="submit" value="submit" class="u-form-control-hidden">
             </div>
-            <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
-            <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try again. </div>
+            <div class="u-form-send-message u-form-send-success"> Gracias nos contactaremos en breve. </div>
+            <div class="u-form-send-error u-form-send-message"> Error porfavor intente nuevamente. </div>
             <input type="hidden" value="" name="recaptchaResponse">
             <input type="hidden" name="formServices" value="05ae18a0-a819-acfd-e080-e3051c992f45">
           </form>
@@ -107,18 +107,5 @@ c5.5,0,9.9,4.5,9.9,9.9V73.3z"></path></svg></span>
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-2692"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-xl u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1"> Cali, Colombia. Copyright 2023 - Prohibida su reproducción total o parcial, así como su traducción a cualquier idioma sin autorización expresa de Amici.<br>El uso de este sitio web implica la aceptación de los Términos y Condiciones, así como la Política de Privacidad de Amici.
-        </p>
-      </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="#" target="_blank">
-        <span>Website Templates</span>
-      </a>
-      <p class="u-text">
-        <span>created with</span>
-      </p>
-      <a class="u-link" href="" target="_blank">
-        <span>Website Builder Software</span>
-      </a>. 
-    </section>
-  
+        </p>  
 </body></html>
